--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -6,104 +6,108 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: oklch(0.97 0.01 316.68);
-  --foreground: oklch(0.37 0.03 259.73);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.37 0.03 259.73);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.37 0.03 259.73);
-  --primary: oklch(0.71 0.16 293.4);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.91 0.05 306.07);
-  --secondary-foreground: oklch(0.45 0.03 257.68);
-  --muted: oklch(0.95 0.03 307.19);
-  --muted-foreground: oklch(0.55 0.02 264.41);
-  --accent: oklch(0.94 0.03 322.47);
-  --accent-foreground: oklch(0.37 0.03 259.73);
-  --destructive: oklch(0.81 0.1 19.47);
-  --border: oklch(0.91 0.05 306.07);
-  --input: oklch(0.91 0.05 306.07);
-  --ring: oklch(0.71 0.16 293.4);
-  --chart-1: oklch(0.71 0.16 293.4);
-  --chart-2: oklch(0.61 0.22 292.63);
-  --chart-3: oklch(0.54 0.25 293.03);
-  --chart-4: oklch(0.49 0.24 292.7);
-  --chart-5: oklch(0.43 0.21 292.63);
-  --sidebar: oklch(0.91 0.05 306.07);
-  --sidebar-foreground: oklch(0.37 0.03 259.73);
-  --sidebar-primary: oklch(0.71 0.16 293.4);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.94 0.03 322.47);
-  --sidebar-accent-foreground: oklch(0.37 0.03 259.73);
-  --sidebar-border: oklch(0.91 0.05 306.07);
-  --sidebar-ring: oklch(0.71 0.16 293.4);
+  --background: oklch(0.9911 0 0);
+  --foreground: oklch(0.2046 0 0);
+  --card: oklch(0.9911 0 0);
+  --card-foreground: oklch(0.2046 0 0);
+  --popover: oklch(0.9911 0 0);
+  --popover-foreground: oklch(0.4386 0 0);
+  --primary: oklch(0.8348 0.1302 160.9080);
+  --primary-foreground: oklch(0.2626 0.0147 166.4589);
+  --secondary: oklch(0.9940 0 0);
+  --secondary-foreground: oklch(0.2046 0 0);
+  --muted: oklch(0.9461 0 0);
+  --muted-foreground: oklch(0.2435 0 0);
+  --accent: oklch(0.9461 0 0);
+  --accent-foreground: oklch(0.2435 0 0);
+  --destructive: oklch(0.5523 0.1927 32.7272);
+  --destructive-foreground: oklch(0.9934 0.0032 17.2118);
+  --border: oklch(0.9037 0 0);
+  --input: oklch(0.9731 0 0);
+  --ring: oklch(0.8348 0.1302 160.9080);
 
-  --font-sans: Open Sans, sans-serif;
-  --font-serif: Source Serif 4, serif;
-  --font-mono: IBM Plex Mono, monospace;
+  --chart-1: oklch(0.8348 0.1302 160.9080);
+  --chart-2: oklch(0.6231 0.1880 259.8145);
+  --chart-3: oklch(0.6056 0.2189 292.7172);
+  --chart-4: oklch(0.7686 0.1647 70.0804);
+  --chart-5: oklch(0.6959 0.1491 162.4796);
 
-  --radius: 1.5rem;
+  --sidebar: oklch(0.9911 0 0);
+  --sidebar-foreground: oklch(0.5452 0 0);
+  --sidebar-primary: oklch(0.8348 0.1302 160.9080);
+  --sidebar-primary-foreground: oklch(0.2626 0.0147 166.4589);
+  --sidebar-accent: oklch(0.9461 0 0);
+  --sidebar-accent-foreground: oklch(0.2435 0 0);
+  --sidebar-border: oklch(0.9037 0 0);
+  --sidebar-ring: oklch(0.8348 0.1302 160.9080);
 
-  --shadow-2xs: 0px 8px 16px -4px oklch(0 0 0 / 0.04);
-  --shadow-xs: 0px 8px 16px -4px oklch(0 0 0 / 0.04);
-  --shadow-sm:
-    0px 8px 16px -4px oklch(0 0 0 / 0.08), 0px 1px 2px -5px oklch(0 0 0 / 0.08);
-  --shadow:
-    0px 8px 16px -4px oklch(0 0 0 / 0.08), 0px 1px 2px -5px oklch(0 0 0 / 0.08);
-  --shadow-md:
-    0px 8px 16px -4px oklch(0 0 0 / 0.08), 0px 2px 4px -5px oklch(0 0 0 / 0.08);
-  --shadow-lg:
-    0px 8px 16px -4px oklch(0 0 0 / 0.08), 0px 4px 6px -5px oklch(0 0 0 / 0.08);
-  --shadow-xl:
-    0px 8px 16px -4px oklch(0 0 0 / 0.08), 0px 8px 10px -5px oklch(0 0 0 / 0.08);
-  --shadow-2xl: 0px 8px 16px -4px oklch(0 0 0 / 0.2);
+  --shadow-x: 0px;
+  --shadow-y: 1px;
+  --shadow-blur: 3px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0.17;
+  --shadow-color: #000000;
+  --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
+  --shadow-xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
+  --shadow-sm: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
+  --shadow: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
+  --shadow-md: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 2px 4px -1px hsl(0 0% 0% / 0.17);
+  --shadow-lg: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 4px 6px -1px hsl(0 0% 0% / 0.17);
+  --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
+  --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
 }
 
 .dark {
-  --background: oklch(0.22 0.01 52.96);
-  --foreground: oklch(0.93 0.03 273.66);
-  --card: oklch(0.28 0.03 307.25);
-  --card-foreground: oklch(0.93 0.03 273.66);
-  --popover: oklch(0.28 0.03 307.25);
-  --popover-foreground: oklch(0.93 0.03 273.66);
-  --primary: oklch(0.79 0.12 295.97);
-  --primary-foreground: oklch(0.22 0.01 52.96);
-  --secondary: oklch(0.34 0.04 309.13);
-  --secondary-foreground: oklch(0.87 0.01 261.81);
-  --muted: oklch(0.28 0.03 307.25);
-  --muted-foreground: oklch(0.71 0.02 261.33);
-  --accent: oklch(0.39 0.05 304.68);
-  --accent-foreground: oklch(0.87 0.01 261.81);
-  --destructive: oklch(0.81 0.1 19.47);
-  --border: oklch(0.34 0.04 309.13);
-  --input: oklch(0.34 0.04 309.13);
-  --ring: oklch(0.79 0.12 295.97);
-  --chart-1: oklch(0.79 0.12 295.97);
-  --chart-2: oklch(0.71 0.16 293.4);
-  --chart-3: oklch(0.61 0.22 292.63);
-  --chart-4: oklch(0.54 0.25 293.03);
-  --chart-5: oklch(0.49 0.24 292.7);
-  --sidebar: oklch(0.34 0.04 309.13);
-  --sidebar-foreground: oklch(0.93 0.03 273.66);
-  --sidebar-primary: oklch(0.79 0.12 295.97);
-  --sidebar-primary-foreground: oklch(0.22 0.01 52.96);
-  --sidebar-accent: oklch(0.39 0.05 304.68);
-  --sidebar-accent-foreground: oklch(0.87 0.01 261.81);
-  --sidebar-border: oklch(0.34 0.04 309.13);
-  --sidebar-ring: oklch(0.79 0.12 295.97);
+  --background: oklch(0.1822 0 0);
+  --foreground: oklch(0.9288 0.0126 255.5078);
+  --card: oklch(0.2046 0 0);
+  --card-foreground: oklch(0.9288 0.0126 255.5078);
+  --popover: oklch(0.2603 0 0);
+  --popover-foreground: oklch(0.7348 0 0);
+  --primary: oklch(0.4365 0.1044 156.7556);
+  --primary-foreground: oklch(0.9213 0.0135 167.1556);
+  --secondary: oklch(0.2603 0 0);
+  --secondary-foreground: oklch(0.9851 0 0);
+  --muted: oklch(0.2393 0 0);
+  --muted-foreground: oklch(0.7122 0 0);
+  --accent: oklch(0.3132 0 0);
+  --accent-foreground: oklch(0.9851 0 0);
+  --destructive: oklch(0.3123 0.0852 29.7877);
+  --destructive-foreground: oklch(0.9368 0.0045 34.3092);
 
-  --shadow-2xs: 0 1px 3px 0px oklch(0 0 0 / 0.05);
-  --shadow-xs: 0 1px 3px 0px oklch(0 0 0 / 0.05);
-  --shadow-sm:
-    0 1px 3px 0px oklch(0 0 0 / 0.1), 0 1px 2px -1px oklch(0 0 0 / 0.1);
-  --shadow: 0 1px 3px 0px oklch(0 0 0 / 0.1), 0 1px 2px -1px oklch(0 0 0 / 0.1);
-  --shadow-md:
-    0 1px 3px 0px oklch(0 0 0 / 0.1), 0 2px 4px -1px oklch(0 0 0 / 0.1);
-  --shadow-lg:
-    0 1px 3px 0px oklch(0 0 0 / 0.1), 0 4px 6px -1px oklch(0 0 0 / 0.1);
-  --shadow-xl:
-    0 1px 3px 0px oklch(0 0 0 / 0.1), 0 8px 10px -1px oklch(0 0 0 / 0.1);
-  --shadow-2xl: 0 1px 3px 0px oklch(0 0 0 / 0.25);
+  --border: oklch(0.2809 0 0);
+  --input: oklch(0.2603 0 0);
+
+  --ring: oklch(0.8003 0.1821 151.7110);
+  --chart-1: oklch(0.8003 0.1821 151.7110);
+  --chart-2: oklch(0.7137 0.1434 254.6240);
+  --chart-3: oklch(0.7090 0.1592 293.5412);
+  --chart-4: oklch(0.8369 0.1644 84.4286);
+  --chart-5: oklch(0.7845 0.1325 181.9120);
+
+  --sidebar: oklch(0.1822 0 0);
+  --sidebar-foreground: oklch(0.6301 0 0);
+  --sidebar-primary: oklch(0.4365 0.1044 156.7556);
+  --sidebar-primary-foreground: oklch(0.9213 0.0135 167.1556);
+  --sidebar-accent: oklch(0.3132 0 0);
+  --sidebar-accent-foreground: oklch(0.9851 0 0);
+  --sidebar-border: oklch(0.2809 0 0);
+  --sidebar-ring: oklch(0.8003 0.1821 151.7110);
+
+  --shadow-x: 0px;
+  --shadow-y: 1px;
+  --shadow-blur: 3px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0.17;
+  --shadow-color: #000000;
+  --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
+  --shadow-xs: 0px 1px 3px 0px hsl(0 0% 0% / 0.09);
+  --shadow-sm: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
+  --shadow: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 1px 2px -1px hsl(0 0% 0% / 0.17);
+  --shadow-md: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 2px 4px -1px hsl(0 0% 0% / 0.17);
+  --shadow-lg: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 4px 6px -1px hsl(0 0% 0% / 0.17);
+  --shadow-xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.17), 0px 8px 10px -1px hsl(0 0% 0% / 0.17);
+  --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 0% / 0.43);
 }
 
 /* biome-ignore lint/suspicious/noUnknownAtRules: it's fine here */
@@ -140,9 +144,14 @@
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
 
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
-  --font-serif: var(--font-serif);
+  --font-sans: Outfit, sans-serif;
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: monospace;
+
+  --radius: 1rem;
+
+  --tracking-normal: 0.025em;
+  --spacing: 0.25rem;
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -178,5 +187,52 @@
   body {
     /* biome-ignore lint/suspicious/noUnknownAtRules: it's fine here */
     @apply bg-background text-foreground;
+    font-optical-sizing: auto;
+    font-style: normal;
   }
+}
+
+.outfit-100 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 100;
+}
+
+.outfit-200 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 200;
+}
+
+.outfit-300 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 300;
+}
+
+.outfit-400 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 400;
+}
+
+.outfit-500 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 500;
+}
+
+.outfit-600 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 600;
+}
+
+.outfit-700 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 700;
+}
+
+.outfit-800 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 800;
+}
+
+.outfit-900 {
+  font-family: 'Outfit', sans-serif;
+  font-weight: 900;
 }
